[project]
name = "ynab-compare-transactions"
version = "0.1.0"
description = "Python CLI tool to compare Chase bank transactions with YNAB transactions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ynab-compare = "compare:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
